Fix default alignment

--- a/django_bootstrap_icons/static/bootstrap_icons/css/bootstrap_icons.css
+++ b/django_bootstrap_icons/static/bootstrap_icons/css/bootstrap_icons.css
@@ -1,10 +1,10 @@
 /* set alignment to default */
 svg {
-    vertical-align: -.125em;
+    vertical-align: -.125rem;
 }
 
 .bi-valign-default {
-    vertical-align: -.125em;
+    vertical-align: -.125rem;
 }
 
 .bi-valign-top {
